syntax = "proto3";

option go_package = "github.com/get-eventually/go-eventually/postgres/internal/user/proto";

import "google/type/date.proto";

message Event {
  message WasCreated {
    string id = 1;
    string first_name = 2;
    string last_name = 3;
    google.type.Date birth_date = 4;
    string email = 5;
  }

  message EmailWasUpdated {
    string email = 1;
  }

  oneof event {
    WasCreated was_created = 1;
    EmailWasUpdated email_was_updated = 2;
  }
}
